
// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "protobuf/";

package protobuf;

// Service definition
service SLAsvc  {
  rpc CreateSLA (InputSLAObj) returns (InputSLAObj);
  rpc DeleteSLA (SLAId) returns (SLAObj);
  rpc GetSLA (SLAId) returns (SLAObj);
}

message Empty {}

message SLAObj {
	string Id = 1; 
	string Name = 2; 
	string State = 3; 

  message Details {
    message Guarantee {
      string Name = 1;     
	    string Constraint = 2; 
    }

    repeated Guarantee guarantees = 1;
  }

	repeated Details details = 4; 
}

message InputSLAObj {
	string ServiceId = 1; 
	
  message InputSLAObjRole {
    string Id = 1;     
	  
    repeated string Kpis = 2;
  }

  repeated InputSLAObjRole Roles = 2; 

	repeated string Kpis = 3; 
}

message SLAId {
	string Id = 1; 
}


